--- a/flexbox_responsive/style.css
+++ b/flexbox_responsive/style.css
@@ -1,5 +1,7 @@
 body {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,0.640515581232493) 50%, rgba(252,176,69,1) 100%);
 
 }
